--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Game of THRONES FTWWWWWWW (Spoilers)</title>
+    <title>Hello there!</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <script src="main.js"></script>
 </head>
 <body>
-    <h1>I'm a Lannister, watch me die spectacularly!!</h1>
-    <p>I think Dani will win.</p>
+    <h1>I'm Daniela Pardo</h1>
+    <p>UX/UI Student at Ironhack-Barcelona</p>
 </body>
 </html>
