--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
 <body>
     <h1>I'm Daniela Pardo</h1>
     <p>UX/UI Student at Ironhack-Barcelona</p>
+    <img src="yo1" style="widht:500px;height:600px">
+    
 </body>
 </html>
