--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <script src="main.js"></script>
 </head>
 <body>
-    <h1>I'm Daniela Pardo</h1>
-    <p>UX/UI Student at Ironhack-Barcelona</p>
-    <img src="yo1" style="widht:500px;height:600px">
+    <h1>Daniela Pardo Velandia</h1>
+    <p>UX/UI Student from Caracas, Venezuela.</p>
+    <img src="images/yo1.jpg" style="width:128px;height128px;">
 </body>
 </html>
