--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <script src="main.js"></script>
 </head>
 <body>
-    <h1>Daniela Pardo Velandia</h1>
-    <p>UX/UI Student from Caracas, Venezuela.</p>
+    <h1> align="center">Daniela Pardo Velandia</h1>
+    <p>UX/UI Designer from Caracas, Venezuela.</p>
     <img src="images/yo1.jpg" style="width:500px;height500px;">
 </body>
 </html>
