--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="main.js"></script>
 </head>
 <body>
-    <h1> align="center">Daniela Pardo Velandia</h1>
+    <h1 align="center">Daniela Pardo Velandia</h1>
     <p>UX/UI Designer from Caracas, Venezuela.</p>
     <img src="images/yo1.jpg" style="width:500px;height500px;">
 </body>
