--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <h1 align="center">Daniela Pardo Velandia</h1>
-    <p>UX/UI Designer from Caracas, Venezuela.</p>
+    <p align="center">UX/UI Designer from Caracas, Venezuela.</p>
     <img src="images/yo1.jpg" style="width:500px;height500px;">
 </body>
 </html>
