--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
     <h1 align="center">Daniela Pardo Velandia</h1>
     <p align="center">UX/UI Designer from Caracas, Venezuela.</p>
     <img src="images/yo1.jpg" style="width:500px;height500px;">
+    <body style="background-image:yo1.jpg>
+        <h2>Background Image</h2>
 </body>
 </html>
