--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <h1 align="center">Daniela Pardo Velandia</h1>
     <p align="center">UX/UI Designer from Caracas, Venezuela.</p>
-    <img src="images/yo1.jpg" style="width:500px;height500px;">
-    <body style="background-image:url("yo1.jpg">
+   <p style="background-image:url(yo1.jpg)" style="width:500px;height500px;">
+    </p>
 </body>
 </html>
