--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <h1 align="center">Daniela Pardo Velandia</h1>
     <p align="center">UX/UI Designer from Caracas, Venezuela.</p>
-   <p style="background-image:url(yo1.jpg)" style="width:500px;height500px;">
-    </p>
+   <p style="background-image:url(yo1.jpg)">
+    </p> 
 </body>
 </html>
