--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <script src="main.js"></script>
 </head>
 <body>
-    <p style="background-image:url(yo1.jpg)">
     <h1 align="center">Daniela Pardo Velandia</h1>
     <p align="center">UX/UI Designer from Caracas, Venezuela.</p>
+    <img src="Images/Vertical_Black-01" alt='UX/UI Designer'
 </body>
 </html>
