--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 <body>
     <h1 align="center">Daniela Pardo Velandia</h1>
     <p align="center">UX/UI Designer from Caracas, Venezuela.</p>
-    <img src="Images/Vertical_Black-01" alt='UX/UI Designer'
+    <img src="Images/Vertical_Black-01.png" alt='UX/UI Designer'
 </body>
 </html>
