--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <script src="main.js"></script>
 </head>
-<body>
+<body background="Vertical_White-01.png">
     <h1 align="center">Daniela Pardo Velandia</h1>
     <p align="center">UX/UI Designer from Caracas, Venezuela.</p>
-    <img src="Images/Vertical_Black-01.png" alt='UX/UI Designer'
+    <img src="Images/Vertical_White-01.png" alt='UX/UI Designer'
 </body>
 </html>
