--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <script src="main.js"></script>
 </head>
-<body background="Vertical_White-01.png">
+<body img src="Images/Vertical_White-01.png"  alt='UX/UI Designer'widht="1000" height="1000">
     <h1 align="center">Daniela Pardo Velandia</h1>
     <p align="center">UX/UI Designer from Caracas, Venezuela.</p>
-    <img src="Images/Vertical_White-01.png"  alt='UX/UI Designer'widht="1000" height="1000">
 </body>
 </html>
