--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <script src="main.js"></script>
 </head>
-<body img src="Images/Vertical_White-01.png"  alt='UX/UI Designer'widht="1000" height="1000">
-    <h1 align="center">Daniela Pardo Velandia</h1>
-    <p align="center">UX/UI Designer from Caracas, Venezuela.</p>
+<body background="Vertical_White-01.png"></body>
+ <img src="Images/Vertical_White-01.png"  alt='UX/UI Designer'widht="4000" height="4000">
+    <h1 Daniela Pardo Velandia</h1>
+    <p>UX/UI Designer from Caracas, Venezuela.</p>
 </body>
 </html>
