--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="main.js"></script>
 </head>
 <body background="Vertical_White-01.png"></body>
- <img src="Images/Vertical_White-01.png"  alt='UX/UI Designer'widht="4000" height="4000">
+ <img src="Images/Vertical_White-01.png"  alt='UX/UI Designer'>
     <h1 Daniela Pardo Velandia</h1>
     <p>UX/UI Designer from Caracas, Venezuela.</p>
 </body>
