--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 <body background="Vertical_White-01.png"></body>
  <img src="Images/Vertical_White-01.png"  alt='UX/UI Designer'>
     <h1 Daniela Pardo Velandia</h1>
-    <p>UX/UI Designer from Caracas, Venezuela.</p>
+    <p>UX/UI Designer | Digital Marketer</p>
 </body>
 </html>
