--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <script src="main.js"></script>
 </head>
-<body background="Vertical_White-01.png"></body>
+<body>
  <img src="Images/Vertical_White-01.png"  alt='UX/UI Designer'>
     <h1 Daniela Pardo Velandia</h1>
     <p>UX/UI Designer | Digital Marketer</p>
