--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="main.js"></script>
 </head>
 <body>
- <img src="Images/Vertical_White-01.png"  alt='UX/UI Designer'>
+ <img src="Images/DSC_0264 (1).jpg"  alt='UX/UI Designer'>
     <h1 Daniela Pardo Velandia</h1>
     <p>UX/UI Designer | Digital Marketer</p>
 </body>
