--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="main.js"></script>
 </head>
 <body>
-    <h1 Daniela Pardo Velandia</h1>
+    <h1> Daniela Pardo Velandia</h1>
     <p>UX/UI Designer | Digital Marketer</p>
 </body>
 </html>
