--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
     <script src="main.js"></script>
 </head>
 <body>
-    <h1> Daniela Pardo Velandia</h1>
-    <p>UX/UI Designer | Digital Marketer | Music Lover</p>
+    <h3> 
+        <strong>Daniela Pardo Velandia</strong>
+ </h3>
+<h2>UX/UI Designer | Digital Marketer | Music Lover</h2>
+<h1>Who I am?</h1>
+<p>Melomaniac for default</p>
 </body>
 </html>
