--- a/index.html
+++ b/index.html
@@ -9,11 +9,32 @@
     <script src="main.js"></script>
 </head>
 <body>
-    <h3> 
+    <h1> 
         <strong>Daniela Pardo Velandia</strong>
- </h3>
+ </h1>
 <h2>UX/UI Designer | Digital Marketer | Music Lover</h2>
-<h1>Who I am?</h1>
-<p>Melomaniac for default</p>
+<h1>==0
+    <strong>Projects</strong>
+    </h1>
+    <p></p>
+    <li>Add a Feature - LinkedIn</li>
+    <p></p>
+    <p></p>
+    <li>Web App- FeedMe</li>
+    <p></p>
+    <p></p>
+    <li>Final Project</li>
+    <p></p>
+    <p></p>
+    <p>
+        "More Projects at"
+        <a href="https://medium.com/@dpardovelandia">Medium</a>
+    </p>
+    <h4>
+        <a href="contact.html">Contat</a>
+        </h4>
+        <h4>
+            <u>About</u>
+    </h4>
 </body>
 </html>
