--- a/index.html
+++ b/index.html
@@ -37,5 +37,8 @@
         <h4>
             <u>About</u>
     </h4>
+    <h4>
+        <a href="https://www.linkedin.com/in/danielapardov/">LinkedIn</a>"
+    </h4>
 </body>
 </html>
