--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <u>About</u>
     </h4>
     <h4>
-        <a href="https://www.linkedin.com/in/danielapardov/">LinkedIn</a>"
+        <a href="https://www.linkedin.com/in/danielapardov/">LinkedIn</a>
     </h4>
 </body>
 </html>
