--- a/index.html
+++ b/index.html
@@ -40,5 +40,8 @@
     <h4>
         <a href="https://www.linkedin.com/in/danielapardov/">LinkedIn</a>
     </h4>
+    <h4>
+        <a href="https://www.instagram.com/danipardo21/">Instagram</a>
+    </h4>
 </body>
 </html>
