--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <strong>Projects</strong>
     </h1>
     <p></p>
-    <li>Add a Feature - LinkedIn</li>
+    <li>Add a Feature - LinkedIn Appointments</li>
     <p></p>
     <p></p>
     <li>Web App- FeedMe</li>
