--- a/index.html
+++ b/index.html
@@ -43,5 +43,8 @@
     <h4>
         <a href="https://www.instagram.com/danipardo21/">Instagram</a>
     </h4>
+    <h4>
+        <a href="https://open.spotify.com/user/12137057022?si=garbMoCkSISAiZpVWktBDA">My Jam</a>
+    </h4>
 </body>
 </html>
