--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <strong>Daniela Pardo Velandia</strong>
  </h1>
 <h4>UX/UI Designer | Digital Marketer | Music Lover</h4>
+<h4>CCS-LAX-BCN</h4>
 <img src="Images/yo1.jpg">
 <h1>
     <strong>Projects</strong>
